Fix focusVisibility on portfolioLink and add ASCII

--- a/src/components/Layout/Footer.css
+++ b/src/components/Layout/Footer.css
@@ -5,6 +5,7 @@
   position: absolute;
   bottom: 0;
   width: 100%;
+  padding-bottom: 0.5em;
 }
 .darkMode .footerContainer {
   background-color: #222;
@@ -47,7 +48,7 @@
 
 .footerContainer__Portfolio {
   margin-top: 0.5em;
-  padding-bottom: 1em;
+  margin-bottom: 0.5em;
   font-size: 0.9em;
   color: inherit;
   transition: 0.5s;
